--- a/templates/result.html
+++ b/templates/result.html
@@ -18,6 +18,11 @@
             margin-left: 5%;
             color: #000;
         }
+        footer{
+            position: fixed;
+            margin-left: 35%;
+            margin-top: 34vh;
+        }
     </style>
 </head>
 <body>
@@ -33,6 +38,11 @@
     
     <br><br>
     <a href="{{ url_for('upload') }}">Upload another file</a> <!-- Link to upload a new file -->
+
+    <footer>
+        <p>Copyright &copy; 2025. developed by pavithranarul.</p>
+        <a href="https://github.com/pavithranarul">reach me at github</a>
+    </footer>
 
 </body>
 </html>
